<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">


    <item
        android:id="@+id/menu_item_solve"
        android:title="@string/solve"
        app:showAsAction="always" />
    <item
        android:id = "@+id/menu_item_clear"
        android:title = "@string/clear"
        app:showAsAction="ifRoom"
        />
    <item
        android:id = "@+id/menu_item_tryExample"
        android:title="@string/tryExample"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_japan"
        android:title="@string/try_japanese_super_sudoku"
        app:showAsAction="never"
        />
    <item
        android:id ="@+id/menu_item_settings"
        android:title="@string/settings"
        app:showAsAction="never"
        />


</menu>